--- a/Assignment1/makefile
+++ b/Assignment1/makefile
@@ -2,6 +2,10 @@
 all : proj1O0.s proj1O1.s proj1O2.s proj1O3.s proj1Os.s proj1Og.s \
       proj1 valgrind_test gdb_test same_file different_file inlined_manually \
 	  locality_row_O0 locality_row_O2 locality_row_O2n locality_col_O0 locality_col_O2 locality_col_O2n\
+	  indirect_addressing_1_0 indirect_addressing_1k_0 indirect_addressing_2_0\
+	  indirect_addressing_1_2 indirect_addressing_1k_2 indirect_addressing_2_2\
+	  indirect_addressing_1_2m indirect_addressing_1k_2m indirect_addressing_2_2m\
+
 
 
 
@@ -63,6 +67,40 @@ locality_col_O2 : locality_col_sums.c
 
 locality_col_O2n : locality_col_sums.c
 	gcc -o $@ $< -O2 -march=native
+
+
+indirect_addressing_1_0 : indirect_addressing_1.c
+	gcc -o $@ $< -O0
+
+indirect_addressing_1k_0 : indirect_addressing_1k.c
+	gcc -o $@ $< -O0
+
+
+indirect_addressing_2_0 : indirect_addressing_2.c
+	gcc -o $@ $< -O0
+
+
+indirect_addressing_1_2 : indirect_addressing_1.c
+	gcc -o $@ $< -O2
+
+indirect_addressing_1k_2 : indirect_addressing_1k.c
+	gcc -o $@ $< -O2
+
+
+indirect_addressing_2_2 : indirect_addressing_2.c
+	gcc -o $@ $< -O2 
+
+
+indirect_addressing_1_2m : indirect_addressing_1.c
+	gcc -o $@ $< -O2  -march=native
+
+indirect_addressing_1k_2m : indirect_addressing_1k.c
+	gcc -o $@ $< -O2  -march=native
+
+
+indirect_addressing_2_2m : indirect_addressing_2.c
+	gcc -o $@ $< -O2  -march=native
+
 
 
 
