common all testing stuff

--- a/Assignment2/makefile
+++ b/Assignment2/makefile
@@ -1,10 +1,13 @@
-BINS = cell_distances
+BINS = cell_distances cell_distances_para
 CFLAGS = -O2 -fopenmp -lm
 
 .PHONY : all
 all : $(BINS) 
 
 cell_distances : cell_distances.c
+	gcc $(CFLAGS) -o $@ $<
+
+cell_distances_para : cell_distances_para.c
 	gcc $(CFLAGS) -o $@ $<
 
 .PHONY : clean
