--- a/Assignment2/makefile
+++ b/Assignment2/makefile
@@ -1,4 +1,4 @@
-BINS = cell_distances cell_distances_para
+BINS = cell_distances cell_distances_serial
 CFLAGS = -O2 -fopenmp -lm
 
 .PHONY : all
@@ -7,7 +7,7 @@ all : $(BINS)
 cell_distances : cell_distances.c
 	gcc $(CFLAGS) -o $@ $<
 
-cell_distances_para : cell_distances_para.c
+cell_distances_serial : cell_distances_para.c
 	gcc $(CFLAGS) -o $@ $<
 
 .PHONY : clean
