as2 : cell_distances_locality

--- a/Assignment2/makefile
+++ b/Assignment2/makefile
@@ -1,13 +1,13 @@
-BINS = cell_distances cell_distances_serial
+BINS = cell_distances_baseline cell_distances
 CFLAGS = -O2 -fopenmp -lm
 
 .PHONY : all
 all : $(BINS) 
 
-cell_distances : cell_distances.c
+cell_distances_baseline : cell_distances.c
 	gcc $(CFLAGS) -o $@ $<
 
-cell_distances_serial : cell_distances_para.c
+cell_distances : cell_distances_para.c
 	gcc $(CFLAGS) -o $@ $<
 
 .PHONY : clean
