--- a/Assignment4/makefile
+++ b/Assignment4/makefile
@@ -8,5 +8,9 @@ all : $(BINS)
 diffusion : diffusion.c
 	$(CC) $(CFLAGS) -o $@ $<
 
+test:
+	tar -czvf diffusion.tar.gz diffusion.c diffusion.cl makefile
+	/home/hpc2021/diffusion_opencl/check_submission.py diffusion.tar.gz
+
 clean:
-	rm -rf $(BINS) 
+	rm -rf $(BINS) diffusion.tar.gz ./extracted/
